--- a/ejemplo-ubuntu-virtualbox/Vagrantfile
+++ b/ejemplo-ubuntu-virtualbox/Vagrantfile
@@ -1,6 +1,11 @@
 Vagrant.configure("2") do |config|
-  config.vm.box = "ubuntu/lunar64"
+  config.vm.box = "ubuntu/trusty64"
   config.vm.provider :virtualbox do |vb|
     vb.gui = true
+  config.vm.provision "shell",
+    inline: "sudo apt update; 
+    sudo apt install --yes nginx;
+    echo 'Hello world'
+    "
   end
 end
